--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h1,h3,h2,h4,h5,a{
   height: 200px;
 }
 
-.main-projects h1 {
+ h1 {
   font-size: 3rem;
   margin-bottom: 2rem;
   /* line-height: 1.2; */
@@ -207,54 +207,32 @@ p{
   order: 2;
 }
 
-.projectcard  h3{
-
-  position: relative;
 
 
-
-}
-/* h3:after{
-
-  content:'\f129';
-  position: absolute;
-  background:rgb(173, 24, 24);
-  color:#fff;
-  top:10px;
-  right:-3px;
-  border-radius: 50%;
-  width: 20px;
-  height:20px;
-} */
-
-.projects-container {
-  max-width: 900px;
-  /* overflow: auto; */
-  border-radius: 10px;
-  height: 200vh;
-  margin: auto;
-  padding: 1rem;
-  display: grid;
-  /* justify-content: center; */
-  /* opacity:0.5 !important; */
-}
 
 .projectcard {
   width: 100%;
   padding: 10px;
-  height: 40vh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-bottom: 2rem;
-  /* box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); */
-  /* background: #3A3B3C; */
-
+  height: 35vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   border-radius: 5px;
+  margin:10px 0;
+  background:#C4B6B6;
+  background:#3D72A4;
+  background:#CC99CC;
+  background: #b2d4dd;
+  background:#8B9A46;
+
+
+
 }
 
 .projectcard h3 {
-  color: #bce0e7;
-  /* font-weight:700px; */
+  color:rgb(75, 70, 70) ;
+  font-weight:700px !important;
 
   margin-bottom: 1rem;
 }
@@ -285,7 +263,7 @@ a .btn-git:active {
   .main-container {
     height: 30vh;
   }
-  .project-card {
+  .projectcard {
     width: 400px;
   }
 }
@@ -300,10 +278,15 @@ a .btn-git:active {
   }
 
   .projectcard {
-    background: #3a3b3c;
+/*     
+  background:#B55400;
+  background:#39311D;
+  background:#541212; */
 
+    
     display: block;
     height: 450px;
+
   }
 
   .projectcard .project-content {
@@ -485,7 +468,7 @@ input[type="text"]:focus {
     display: block;
     /* justify-content: center;
     align-items: center; */
-    background: #3a3b3c;
+    background: #FFF; 
   }
 
   .circlemain {
