Changed background  of projectcard component

--- a/style.css
+++ b/style.css
@@ -221,10 +221,11 @@ p{
   border-radius: 5px;
   margin:10px 0;
   background:#C4B6B6;
-  background:#3D72A4;
+  /* background:#3D72A4;
   background:#CC99CC;
   background: #b2d4dd;
-  background:#8B9A46;
+  background:#8B9A46; */
+  
 
 
 
